# audio_mixing_using_gstreamer

./: CMakeLists.txt  readme.txt
src/: main.c
